apps/ecommerce/frontend/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ecommerce-frontend
  namespace: ecommerce

spec:
  replicas: 1

  selector:
    matchLabels:
      app: ecommerce-frontend

  template:
    metadata:
      labels:
        app: ecommerce-frontend

    spec:
      containers:
        - name: ecommerce-frontend
          image: rajvam6806/e-commerce-frontend:dd09257c279a655b6c3960f0a3a951f98f53b0be

          imagePullPolicy: Always

          ports:
            - containerPort: 80
