apps/ecommerce/frontend/service.yml
apiVersion: v1
kind: Service

metadata:
  name: ecommerce-frontend-service
  namespace: ecommerce
  labels:
    backstage.io/kubernetes-id: e-commerce-frontend

spec:
  selector:
    app: ecommerce-frontend

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
