apps/ecommerce/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ecommerce-frontend-ingress
  namespace: ecommerce
  labels:
    backstage.io/kubernetes-id: e-commerce-frontend
spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:

          - path: /
            pathType: Prefix

            backend:
              service:
                name: ecommerce-frontend-service
                port:
                  number: 80
